--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
+      - name: Enable Corepack (Yarn)
+        run: corepack enable
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
