--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:full": "concurrently \"yarn server\" \"yarn dev\""
   },
   "dependencies": {
+    "better-sqlite3": "^12.4.1",
     "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "idb": "^8.0.3",
