--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
+.env
+.env.*
+
+# Test coverage
+coverage/
+
+# Local development databases (do not commit)
+server/*.sqlite
+server/*.db
